# NeuralMPM

./: .gitignore  LICENSE  README.md  pyproject.toml
neuralmpm/configs/: configs.py
neuralmpm/data/: data_manager.py
neuralmpm/data/parsers/: __init__.py  base_parser.py  dam2d_parser.py  liquid3d_parser.py  monomat2d_parser.py  monomat3d_parser.py  multimat_parser.py  nmpm_parser.py  watergravity_parser.py  wbcsph_parser.py  wdxl_parser.py
neuralmpm/interpolation/: __init__.py  interpolation.py  kernels.py
neuralmpm/models/: losses.py  model_loader.py  model_logger.py
neuralmpm/models/networks/: __init__.py  cno.py  ffno.py  fno.py  unet.py  unet_3d.py
neuralmpm/pipelines/: evaluation.py  simulation.py  training.py  visualisation.py
neuralmpm/scripts/: benchmark.py  eval.py  experiment.py  render.py  rollout.py  stats.py  train.py
neuralmpm/util/: metrics.py  slurm.py  string_utils.py
